# Inventary-management-

./: inventory[1].h
capstone/: CMakeLists.txt  Makefile  README.md  inventory_manager
capstone/include/: InventoryManager.h
capstone/src/: InventoryManager.cpp  inventory.c  main.cpp
